resources/insights-perf/xjoin-jenkins-perf/xjoin-jenkins.route.yml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: jenkins-persistent
  name: xjoin-jenkins
spec:
  host:  xjoin-jenkins.apps.rhperfcluster.ptjz.p1.openshiftapps.com
  to:
    kind: Service
    name: jenkins
    weight: 100
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
